# brandfetch-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  brandfetch_server.py  pyproject.toml
docs/: api_reference.md  authentication.md  examples.md
examples/: README.md  __init__.py  advanced_usage.py  basic_usage.py
tests/: __init__.py  test_brandfetch.py
