[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandfetch-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the Brandfetch API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Brandfetch MCP Contributors"}
]
keywords = ["mcp", "brandfetch", "llm", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.245",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.9"